--- a/demo.html
+++ b/demo.html
@@ -3,6 +3,8 @@
         <title>New page</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <p>This is a paragraph<p>
+        <div>This is a division section</div>
+        <section>This is a section tag</section>
     </body>
 </html>
